@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=qt4? ( dev-qt/qtgui:4 dev-qt/qtopengl:4 media-libs/freeglut ) qt5? ( dev-qt/qtgui:5 dev-qt/qtopengl:5 media-libs/freeglut ) test? ( dev-cpp/gtest ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A generic and efficient data structure for representing and manipulating polygonal meshes
+EAPI=5
+HOMEPAGE=http://www.openmesh.org/
+IUSE=qt4 qt5 static-libs test
+KEYWORDS=~amd64 ~ia64 ~x86
+LICENSE=LGPL-3-with-linking-exception
+RDEPEND=qt4? ( dev-qt/qtgui:4 dev-qt/qtopengl:4 media-libs/freeglut ) qt5? ( dev-qt/qtgui:5 dev-qt/qtopengl:5 media-libs/freeglut )
+SLOT=0
+SRC_URI=http://openmesh.org/media/Releases/3.3/OpenMesh-3.3.tar.bz2
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=eb6c066fe2570efe91ffdf0a1778a688
